# happymimi_manipulation

./: README.md
dynamixel_controller/: CMakeLists.txt  README.md  \  package.xml
dynamixel_controller/launch/: dynamixel_controller.launch  head_dxl_ctrlr.launch  test.launch
dynamixel_controller/param/: mimi_specification.yaml
dynamixel_controller/src/: head_motor_ctrl.py  motor_controller.py
dynamixel_controller/src/demo/: rl_twist_demo.py  twist_oc.py
grasping_object/: CMakeLists.txt  README.md  package.xml
grasping_object/launch/: luggage_manipulation.launch  recognition_to_grasping.launch
grasping_object/param/: location_dict.yaml
grasping_object/src/: grasping_action_server.py  grasping_executor.py  pick_luggage.py  pick_luggage_master.py  recognition_to_grasping.py  recognition_to_grasping_master.py
happymimi_manipulation/: CMakeLists.txt  package.xml
happymimi_manipulation_msgs/: .package.xml.swp  CMakeLists.txt  CMakeLists.txt~  package.xml
happymimi_manipulation_msgs/action/: GraspingExecutor.action  GraspingObject.action  PickLuggage.action
happymimi_manipulation_msgs/srv/: ManipulateArm.srv  RecognitionToGrasping.srv
object_grasper/: CMakeLists.txt  package.xml
object_grasper/src/: grasping_executor.py
