<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_controller</name>
  <version>0.0.0</version>
  <description>The dynamixel_controller package</description>

  <maintainer email="tatsuhito@todo.todo">tatsuhito</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
